# cortical_surface

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  epm-header.in
models/: Makefile.am
scripts/: Makefile.am  cortical_surface.in  cortical_surface.pl  msd_masks.in  msd_masks.pl
src/: Makefile.am  deform_polygons.c  deform_surface.c
